force-app/main/default/objects/Lead/fields/Campana__c.field-meta.xml
<CustomField>
    <fullName>Campana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>