force-app/main/default/objects/Lead/fields/Como_nos_conoci__c.field-meta.xml
<CustomField>
    <fullName>Como_nos_conoci__c</fullName>
    <label>Como nos conoció?</label>
    <type>TextArea</type>
</CustomField>