force-app/main/default/objects/Lead/fields/Como_se_sintio__c.field-meta.xml
<CustomField>
    <fullName>Como_se_sintio__c</fullName>
    <label>Como se sintió?</label>
    <type>TextArea</type>
</CustomField>