force-app/main/default/objects/Lead/fields/Cual_es_tu_mood__c.field-meta.xml
<CustomField>
    <fullName>Cual_es_tu_mood__c</fullName>
    <label>Cual es tu mood?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>