force-app/main/default/objects/Lead/fields/Informacion_adicional_origen__c.field-meta.xml
<CustomField>
    <fullName>Informacion_adicional_origen__c</fullName>
    <label>Información adicional origen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>