force-app/main/default/objects/Lead/fields/Motivo_de_inversion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_inversion__c</fullName>
    <label>Motivo de inversion?</label>
    <type>TextArea</type>
</CustomField>