force-app/main/default/objects/Lead/fields/Motivo_descate__c.field-meta.xml
<CustomField>
    <fullName>Motivo_descate__c</fullName>
    <label>Motivo descate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No le interesa la oferta actual de productos.</fullName>
            </value>
            <value>
                <fullName>No responde llamadas / mensajes</fullName>
            </value>
            <value>
                <fullName>Problemas internos del candidato</fullName>
            </value>
            <value>
                <fullName>Compró en otro proyecto.</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>