force-app/main/default/objects/Lead/fields/Para_cuando_necesita_hacer_la_operacion__c.field-meta.xml
<CustomField>
    <fullName>Para_cuando_necesita_hacer_la_operacion__c</fullName>
    <label>Para cuando necesita hacer la operacion?</label>
    <type>TextArea</type>
</CustomField>