force-app/main/default/objects/Lead/fields/Preferencia_horario_de_contactacion__c.field-meta.xml
<CustomField>
    <fullName>Preferencia_horario_de_contactacion__c</fullName>
    <label>Preferencia horario de contactacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 a 12</fullName>
            </value>
            <value>
                <fullName>12 a 14</fullName>
            </value>
            <value>
                <fullName>14 a 18</fullName>
            </value>
            <value>
                <fullName>18 a 22</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>