force-app/main/default/objects/Lead/fields/Preferencia_medio_de_contactacion__c.field-meta.xml
<CustomField>
    <fullName>Preferencia_medio_de_contactacion__c</fullName>
    <label>Preferencia medio de contactacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Llamada</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>No contactar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>