force-app/main/default/objects/Lead/fields/Que_esta_buscando__c.field-meta.xml
<CustomField>
    <fullName>Que_esta_buscando__c</fullName>
    <label>Que esta buscando?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invertir</fullName>
                <default>true</default>
                <label>Invertir</label>
            </value>
            <value>
                <fullName>Para vivir</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>