force-app/main/default/objects/Lead/fields/Que_le_gustaria_recibir__c.field-meta.xml
<CustomField>
    <fullName>Que_le_gustaria_recibir__c</fullName>
    <label>Que le gustaria recibir?</label>
    <type>TextArea</type>
</CustomField>