force-app/main/default/objects/Lead/fields/Que_le_intereso_de_nuestra_propuesta__c.field-meta.xml
<CustomField>
    <fullName>Que_le_intereso_de_nuestra_propuesta__c</fullName>
    <label>Que le intereso de nuestra propuesta?</label>
    <type>TextArea</type>
</CustomField>