force-app/main/default/objects/Lead/fields/Que_presupuesto_tiene__c.field-meta.xml
<CustomField>
    <fullName>Que_presupuesto_tiene__c</fullName>
    <label>Que presupuesto tiene?</label>
    <type>TextArea</type>
</CustomField>