force-app/main/default/objects/Lead/fields/Tiempo_sesion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_sesion__c</fullName>
    <label>Tiempo sesion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>