force-app/main/default/objects/Lead/fields/Tiene_experiencia_en_real_estate__c.field-meta.xml
<CustomField>
    <fullName>Tiene_experiencia_en_real_estate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene experiencia en real estate?</label>
    <type>Checkbox</type>
</CustomField>