force-app/main/default/objects/Lead/listViews/Todos_los_candidatos.listView-meta.xml
<ListView>
    <fullName>Todos_los_candidatos</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Campana__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>No Cualificado,Nuevo,Investigacion previa,Obtener informacion,Cliente potencial,Cualificado</value>
    </filters>
    <label>Todos los candidatos</label>
</ListView>